[package]
name = "bang_bang_bevy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy"}
ggrs = "0.4.3"
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs"}
structopt = { version = "0.3", default-features = false }